# PointCloud2Mesh

./: .gitignore  CMakeLists.txt  Comparison.md  ParametricReconstruction.md  README.md  conf.json  package.xml  pcd_subscriber_node.py  tutorial_installation.md
.github/workflows/: main.yml
param/: vis.json
scripts/: copy_of_fragment.pcd  copy_of_fragment_normals.pcd  icp.py  pc2_from_mesh.py  rec.py  test.json  test2.json  utils.py
src/: 3d_rec.cpp
